--- a/book.bib
+++ b/book.bib
@@ -112,3 +112,14 @@
   year={1979},
   publisher={Taylor \& Francis}
 }
+
+@article{tibshirani1996regression,
+  title={Regression shrinkage and selection via the lasso},
+  author={Tibshirani, Robert},
+  journal={Journal of the Royal Statistical Society: Series B (Methodological)},
+  volume={58},
+  number={1},
+  pages={267--288},
+  year={1996},
+  publisher={Wiley Online Library}
+}
