--- a/book.bib
+++ b/book.bib
@@ -123,3 +123,14 @@
   year={1996},
   publisher={Wiley Online Library}
 }
+
+@article{friedman2010regularization,
+  title={Regularization paths for generalized linear models via coordinate descent},
+  author={Friedman, Jerome and Hastie, Trevor and Tibshirani, Rob},
+  journal={Journal of statistical software},
+  volume={33},
+  number={1},
+  pages={1},
+  year={2010},
+  publisher={NIH Public Access}
+}
