--- a/book.bib
+++ b/book.bib
@@ -134,3 +134,14 @@
   year={2010},
   publisher={NIH Public Access}
 }
+
+@article{zou2005regularization,
+  title={Regularization and variable selection via the elastic net},
+  author={Zou, Hui and Hastie, Trevor},
+  journal={Journal of the royal statistical society: series B (statistical methodology)},
+  volume={67},
+  number={2},
+  pages={301--320},
+  year={2005},
+  publisher={Wiley Online Library}
+}
